src/tests/ValidTests/OperationsValid.agl
t1 : Point = (1,3)+(3:4); # Funciona, podemos somar um ponto com um vetor

t5: Point = 2*(1,3); # Funciona, podemos multiplicar um ponto por um inteiro

t6: Point = (1,3)*2; # Funciona, podemos multiplicar um ponto por um inteiro

t9: Number = (1:3)*(3:4) + 2; # Funciona, podemos multiplicar 2 vetores

t10: Boolean = 2.0 == 2; # Funciona, podemos comparar um float com um inteiro
