src/tests/InvalidTests/OperationsInvalid.agl
t2 : Point = (1,3)+3; # erro! não podemos somar um ponto com um inteiro
 
# t3: Point = (1,3)+(3,4); # erro! não podemos somar dois pontos

# t4: Point = 2/(1,3); # erro! não podemos dividir um inteiro por um ponto

# t7: Vector = (1:3)*(3:4); # erro! Uma multiplicação de 2 vetores dá um número

# t8: Vector = (1:3)/(3:4); # erro! não podemos dividir 2 vetores

